# space-extractor

./: CMakeLists.txt  CMakeLists.txt.user.hAVkxN  README.md  RoninEngine  package.json  update-engine-force.sh  update-engine.sh  update-replace-engine.sh
resources/data/: AtlasObject.asset  artefacts-v1.atlas.asset  asteroids-v1.atlas.asset  asteroids-v2.atlas.asset  asteroids.xcf  maps.asset  resources.asset  resources.json  sounds.asset  sounds.json  ui.asset
resources/data/gfx/interface/: lcd_font-proj.sbf  numbers-lcd-display.xml
resources/data/levels/: level1.map  level1.nav
resources/data/loader/: font.conf  graphics.conf  number-font-lcd.conf  player-sprites.conf  textures.conf
resources/data/locale/en_US/: locale_mainmenu.txt
resources/data/locale/ru_RU/: locale_levels.txt  locale_mainmenu.txt
resources/data/maps/: map0.asset
resources/data/sprites/: player-weapon-v1.png~  ui_layer-infobar.xcf
source/: AISectorLine.cpp  AISectorLine.h  BunkerGame.cpp  BunkerGame.h  BunkerGameShooter.cpp  BunkerGameShooter.h  ComponentSpacePlanet.cpp  ComponentSpacePlanet.h  OverlayLevel.cpp  OverlayLevel.h  SpaceMainMenu.cpp  SpaceMainMenu.h  WorldStrategyAsteroids.cpp  WorldStrategyAsteroids.h  gamelevel.cpp  gamelevel.h  gamemainmenu.cpp  gamemainmenu.h  main.cpp  sector_line_level.cpp  sector_line_level.h  space_planet.cpp  space_planet.h
source/Worlds/world_piano/: WorldPiano.cpp  WorldPiano.h
source/Worlds/world_population/: PathMover.cpp  PathMover.h  PathMoverMenu.cpp  PathMoverMenu.h
source/Worlds/world_strategy/: ComponentSpacePlanet.cpp  ComponentSpacePlanet.h  WorldStrategyAsteroids.cpp  WorldStrategyAsteroids.h
src/: GameAssets.cpp  GameAssets.hpp  LevelEnhancer.cpp  LevelEnhancer.hpp  PlayerCursor.cpp  PlayerCursor.hpp  SpaceDepends.hpp  SpaceExtractor.hpp  main.cpp
src/Objects/: BulletDirection.cpp  BulletDirection.hpp  Collision.cpp  Collision.hpp  EnemyClass.cpp  EnemyClass.hpp  IVStars.cpp  IVStars.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Player.cpp  Player.hpp  PlayerGUI.cpp  SpriteAnimator.cpp  SpriteAnimator.hpp  Weapon.hpp  WeaponMachineGun.cpp  WeaponMachineGun.hpp
src/Worlds/: WGame.cpp  WGame.hpp  WMainMenu.cpp  WMainMenu.hpp  WParticleEdtitor.cpp  WParticleEdtitor.hpp
